--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <h1>this is amit</h1>
 <h1>this is amit</h1>
 <h1>this is amit kumar</h1>
-<h2>this is feature1</h2>
+<h2>this is feature1 (button)</h2>
