--- a/index.html
+++ b/index.html
@@ -2,5 +2,5 @@
 <h1>this is amit</h1>
 <h1>this is amit kumar</h1>
 <h2>this is feature1 (dropdown)</h2>
-<h2>this is feature1 (button)</h2>
+<h2>this is feature1 (button) (dropdown)</h2>
 
