--- a/index.html
+++ b/index.html
@@ -1,5 +1,1 @@
-<h1>this is amit</h1>
-<h1>this is amit</h1>
-<h1>this is amit kumar</h1>
-<h2>this is feature1 (dropdown)</h2>
-<h2>this is feature1 (button) (dropdown)</h2>
+<h1>I am in main</h1>
